Update 1-5. 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/1-5. 프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/1-5. 프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -453,22 +453,22 @@ SDYN_BOOK-BOOKID.
 
 **3) `TOP` 모듈 생성**
 ```abap
-PROCESS BEFORE OUTPUT.
- MODULE STATUS_0100.
- MODULE CLEAR_OK_CODE.
-*
-PROCESS AFTER INPUT.
- MODULE EXIT AT EXIT-COMMAND.
- CHAIN.
-  FIELD: SDYN_BOOK-CARRID, SDYN_BOOK-CONNID, SDYN_BOOK-FLDATE, SDYN_BOOK-BOOKID.
-  MODULE CHECK_INPUTS ON CHAIN-REQUEST.
- ENDCHAIN.
- MODULE USER_COMMAND_0100.
+PROGRAM SAPMZPRACTICE05B03.
+
+TABLES: SDYN_BOOK.
+
+DATA: OK_CODE TYPE sy-ucomm,
+      gv_cancelled TYPE C LENGTH 1,
+      gs_data TYPE SDYN_BOOK.
 ```
 </br>
 
 **4) `PAI` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZPRACTICE05B03
+*&---------------------------------------------------------------------*
+
 MODULE check_inputs INPUT.
   IF SDYN_BOOK-CARRID IS NOT INITIAL AND
      SDYN_BOOK-CONNID IS NOT INITIAL AND
@@ -524,6 +524,10 @@ ENDMODULE.
 </br>
 
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZPRACTICE05B03
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
   SET PF-STATUS 'S100'.
   MOVE-CORRESPONDING gs_data TO SDYN_BOOK.
@@ -565,6 +569,10 @@ ENDMODULE.
 
 - **위 문제 코드에서 `PAI` 코드 수정**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZPRACTICE05B03
+*&---------------------------------------------------------------------*
+
 MODULE check_inputs INPUT.
   IF SDYN_BOOK-CARRID IS NOT INITIAL AND
      SDYN_BOOK-CONNID IS NOT INITIAL AND
