Update 3-1. 프로그래밍 전용 웹 스크린 개발(총 정리).md

--- a/ABAP 심화/3-1. 프로그래밍 전용 웹 스크린 개발(총 정리).md
+++ b/ABAP 심화/3-1. 프로그래밍 전용 웹 스크린 개발(총 정리).md
@@ -368,6 +368,10 @@ PROCESS AFTER INPUT.
 
 **5) PAI 코드 추가**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZMDPB03_001
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
   CASE INPUT01.
     WHEN 'X'.
@@ -386,6 +390,10 @@ ENDMODULE.
 
 **6) PBO 코드 추가**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZMDPB03_001
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'. " Application 버튼들 등 설정
  SET TITLEBAR 'T100'.
@@ -459,6 +467,10 @@ PROCESS AFTER INPUT.
 
 **5) PAI 코드 추가**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZBC410_SOLUTION_03
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
 
   IF exit_button = 'X'.
@@ -488,6 +500,10 @@ ENDMODULE.
 
 **6) PBO 코드 추가**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZBC410_SOLUTION_03
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
   IF gv_subrc <> 0.
     CLEAR SDYN_CONN.
@@ -561,6 +577,10 @@ PROCESS AFTER INPUT.
 
 **5) PAI 코드 추가**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZPRACTICE01B03
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
 
   SELECT * FROM smeal
@@ -939,6 +959,10 @@ DATA: ok_code TYPE sy-ucomm,
 
 **8) `PAI` 모듈 구현**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03002
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
   CASE OK_CODE.
     WHEN 'CHBTN'.
@@ -958,6 +982,10 @@ ENDMODULE.
 **9) `PBO` 모듈 구현**
 - 시스템변수 : `SY-DATUM` = 오늘 날짜, `SY-UZEIT` = 현재 시간, `SY-UNAME` = 로그인 사용자 ID
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03002
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
  SET TITLEBAR 'T100' WITH sy-datum sy-uzeit sy-uname.
@@ -1053,6 +1081,10 @@ DATA: exit_button TYPE C,
 
 **5) `PAI` 모듈 구현**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZBC410_SOLUTION_03
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
 
   IF exit_button = 'X'.
@@ -1086,6 +1118,10 @@ ENDMODULE.
 
 **6) `PBO` 모듈 구현**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZBC410_SOLUTION_03
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
 
   IF gv_button = 1.
@@ -1181,6 +1217,10 @@ DATA: OK_CODE TYPE sy-ucomm,
 
 **4) `PAI` 모듈 구현**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZPRACTICE02B03
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
 
   CASE OK_CODE.
@@ -1240,6 +1280,10 @@ ENDMODULE.
 
 **5) `PBO` 모듈 구현**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZPRACTICE02B03
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
   IF gv_button1 = 1.
     LOOP AT SCREEN.
@@ -1329,6 +1373,10 @@ ENDMODULE.
 
 **2) 모듈 `PAI` 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03003
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
 
   CASE OK_CODE.
@@ -1384,6 +1432,10 @@ ENDMODULE.
 
 **3) 모듈 `PBO` 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03003
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
  SET TITLEBAR 'T100'.
@@ -1696,6 +1748,10 @@ PROCESS AFTER INPUT.
 
 **5) `PBO` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03004
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
  SET TITLEBAR 'T100' WITH sy-dynnr.
@@ -1727,6 +1783,10 @@ ENDMODULE.
 
 **6) `PAI` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03004
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
   CASE OK_CODE.
     WHEN 'BACK'.
@@ -1833,6 +1893,10 @@ DATA: OK_CODE TYPE sy-ucomm,
 
 **3) `F01` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZPRACTICE03B03
+*&---------------------------------------------------------------------*
+
 FORM get_data USING pa_carrid pa_connid pa_fldate
               CHANGING gt_data.
 
@@ -1852,6 +1916,10 @@ ENDFORM.
 
 **4) `PBO` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZPRACTICE03B03
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
 * SET PF-STATUS 'xxxxxxxx'.
 * SET TITLEBAR 'xxx'.
@@ -1874,6 +1942,10 @@ ENDMODULE.
 
 **5) `PAI` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZPRACTICE03B03
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
   gv_carrid = ZSCARRFLIGHT_B03-CARRID.
   gv_connid = ZSCARRFLIGHT_B03-CONNID.
@@ -1962,6 +2034,10 @@ PROCESS AFTER INPUT.
 **4) `PBO` 모듈 수정**
 - `OK_CODE` 초기화 코드 추가됨
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZBC410_SOLUTION_03_01
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
 
   SET PF-STATUS 'S100'.
@@ -1998,6 +2074,10 @@ ENDMODULE.
 - exit_button = 'T'` 일 때의 if문 추가
 - `exit_button` 초기화 코드 추가
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZBC410_SOLUTION_03_01
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
 
   IF exit_button = 'X'.
@@ -2260,6 +2340,10 @@ DATA: gv_button TYPE I,
 
 **4) `F01` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03004
+*&---------------------------------------------------------------------*
+
 FORM set_icon USING icon_name
               CHANGING icon_result.
   CALL FUNCTION 'ICON_CREATE'
@@ -2282,6 +2366,10 @@ ENDFORM.
 
 **5) `PAI` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03004
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
   CASE OK_CODE.
     WHEN 'BTN01'.
@@ -2333,6 +2421,10 @@ ENDMODULE.
 
 **6) `PBO` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03004
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
  SET TITLEBAR 'T100' WITH sy-dynnr.
@@ -2491,6 +2583,10 @@ DATA: OK_CODE TYPE sy-ucomm,
 
 **3) `F01` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZPRACTICE04B03
+*&---------------------------------------------------------------------*
+
 FORM set_icons USING icon_name CHANGING icon_result.
   CALL FUNCTION 'ICON_CREATE'
     EXPORTING
@@ -2512,6 +2608,10 @@ ENDFORM.
 
 **4) `PAI` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZPRACTICE04B03
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
   IF OK_CODE = 'BTN01'.
     SELECT SINGLE * FROM SPFLI
@@ -2531,6 +2631,10 @@ ENDMODULE.
 
 **5) `PBO` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZPRACTICE04B03
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
   IF gv_subrc = 4.
     PERFORM set_icons USING 'ICON_LED_RED' CHANGING ICONFIELD01.
@@ -2594,6 +2698,10 @@ DATA: VIEW TYPE C VALUE 'X',
 
 **3) `PAI` 모듈 수정**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZBC410_SOLUTION_03_01
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
 
   IF exit_button = 'X'.
@@ -2653,6 +2761,10 @@ ENDMODULE.
 
 **4) `PBO` 모듈 수정**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZBC410_SOLUTION_03_01
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
 
   SET PF-STATUS 'S100'.
@@ -2743,6 +2855,10 @@ PROCESS AFTER INPUT.
 
 **3) `F01` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZPRACTICE04B03
+*&---------------------------------------------------------------------*
+
 FORM set_icons USING icon_name CHANGING icon_result.
   CALL FUNCTION 'ICON_CREATE'
     EXPORTING
@@ -2781,6 +2897,10 @@ DATA: OK_CODE TYPE sy-ucomm,
 
 **5) `PAI` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZPRACTICE04B03
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
   IF OK_CODE = 'BTN01'.
     SELECT SINGLE * FROM SPFLI
@@ -2818,6 +2938,10 @@ ENDMODULE.
 
 **6) `PBO` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZPRACTICE04B03
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
   MOVE-CORRESPONDING gs_sflight TO SFLIGHT.
   IF gv_subrc = 3.
@@ -2846,7 +2970,6 @@ ENDMODULE.
 </br>
 </br>
 
-
 # 12/17
 
 </br>
@@ -2863,7 +2986,7 @@ ENDMODULE.
 
 - **`LEAVE TO SCREEN 0`** 같은 화면 전환 명령은 **`PAI`** 에서만
 - **`SCREEN-INPUT`** 같은 화면 속성 변경은 **`PBO`** 에서만
-- 사용자 입력 기반 SELECT는 **`PAI`** , 조회 결과 화면 반영/속성 변경은 **`PBO`**
+- 사용자 입력 기반 SELECT는 **`PAI`** , 조회 결과 예 반영/속성 변경은 **`PBO`**
 - **OK_CODE 초기화** 코드 꼭 넣어줘야 함 ( 보통 **`PBO`** 에서)
 - **`OK_CODE`** 케이스문은 **`PAI`** 에서
 - LOOP AT SCREEN 사용시 **`MODIFY SCREEN`** 넣기
@@ -2980,6 +3103,10 @@ ENDCHAIN.
 
 **2) `Screen` 코드에서 모듈 생성 ( PAI, PBO )**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03005
+*&---------------------------------------------------------------------*
+
 PROCESS BEFORE OUTPUT.
  MODULE STATUS_0100.
  MODULE INIT_DATA.
@@ -3024,6 +3151,10 @@ PROCESS AFTER INPUT.
 
 **3) `PAI` 에서 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03005
+*&---------------------------------------------------------------------*
+
 " 단일입력
 MODULE check_input INPUT.
   IF SCARR-CARRID IS NOT INITIAL.
@@ -3091,6 +3222,10 @@ PROCESS AFTER INPUT.
 ```
 - 해당 PAI 모듈에서 코드 작성
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03005
+*&---------------------------------------------------------------------*
+
 MODULE exit INPUT.
   CASE OK_CODE.
     WHEN 'EXIT'.
@@ -3163,6 +3298,10 @@ DATA: gv_answer TYPE C.
 </br>
 
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03005
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
   CASE OK_CODE.
     WHEN 'BACK'.
@@ -3291,22 +3430,22 @@ SDYN_BOOK-BOOKID.
 
 **3) `TOP` 모듈 생성**
 ```abap
-PROCESS BEFORE OUTPUT.
- MODULE STATUS_0100.
- MODULE CLEAR_OK_CODE.
-*
-PROCESS AFTER INPUT.
- MODULE EXIT AT EXIT-COMMAND.
- CHAIN.
-  FIELD: SDYN_BOOK-CARRID, SDYN_BOOK-CONNID, SDYN_BOOK-FLDATE, SDYN_BOOK-BOOKID.
-  MODULE CHECK_INPUTS ON CHAIN-REQUEST.
- ENDCHAIN.
- MODULE USER_COMMAND_0100.
+PROGRAM SAPMZPRACTICE05B03.
+
+TABLES: SDYN_BOOK.
+
+DATA: OK_CODE TYPE sy-ucomm,
+      gv_cancelled TYPE C LENGTH 1,
+      gs_data TYPE SDYN_BOOK.
 ```
 </br>
 
 **4) `PAI` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZPRACTICE05B03
+*&---------------------------------------------------------------------*
+
 MODULE check_inputs INPUT.
   IF SDYN_BOOK-CARRID IS NOT INITIAL AND
      SDYN_BOOK-CONNID IS NOT INITIAL AND
@@ -3362,6 +3501,10 @@ ENDMODULE.
 </br>
 
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZPRACTICE05B03
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
   SET PF-STATUS 'S100'.
   MOVE-CORRESPONDING gs_data TO SDYN_BOOK.
@@ -3403,6 +3546,10 @@ ENDMODULE.
 
 - **위 문제 코드에서 `PAI` 코드 수정**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZPRACTICE05B03
+*&---------------------------------------------------------------------*
+
 MODULE check_inputs INPUT.
   IF SDYN_BOOK-CARRID IS NOT INITIAL AND
      SDYN_BOOK-CONNID IS NOT INITIAL AND
@@ -3464,6 +3611,7 @@ ENDMODULE.
 - 나가면 창이 띄워짐
   
 <img width="439" height="134" alt="image" src="https://github.com/user-attachments/assets/be90aad3-8164-45d5-9dc7-a11a2e4153fe" />
+
 
 </br>
 </br>
@@ -3608,6 +3756,10 @@ DATA: gv_dynnr TYPE sy-dynnr.
 
 **4) `PAI` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03006
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
   CASE OK_CODE.
     WHEN 'BACK'.
@@ -3622,6 +3774,10 @@ ENDMODULE.
 
 **5) `PBO` 모듈 생성**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03006
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
  SET TITLEBAR 'T100' WITH sy-uname.
@@ -3830,6 +3986,10 @@ PROCESS AFTER INPUT.
 
 **5) `PAI` 모듈 수정**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03006
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
   CASE OK_CODE.
     WHEN 'BACK'.
@@ -3849,6 +4009,10 @@ ENDMODULE.
 
 **6) `PBO` 모듈 수정**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03006
+*&---------------------------------------------------------------------*
+
 MODULE set_tabstrip OUTPUT.
   CASE TAB_STRIP-activetab.
     WHEN 'TABFC1'.
@@ -3996,6 +4160,10 @@ DATA: gv_dynnr TYPE sy-dynnr.
 
 **4) `PAI` 모듈 수정**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03006
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
   CASE OK_CODE.
     WHEN 'BACK'.
@@ -4025,6 +4193,10 @@ ENDMODULE.
 
 **5) `PBO` 모듈 수정**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZB03006
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
  SET PF-STATUS 'S100'.
  SET TITLEBAR 'T100' WITH sy-uname.
@@ -4130,7 +4302,9 @@ PROCESS AFTER INPUT.
 
 **3) `TOP` 모듈 수정**
 ```abap
-PROGRAM SAPMZBC410_SOLUTION_03_01.
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZBC410_SOLUTION_03_02
+*&---------------------------------------------------------------------*
 
 TABLES: SDYN_CONN, SPFLI, SCARR, SBOOK.
 
@@ -4158,6 +4332,10 @@ DATA: gs_spfli TYPE spfli,
 **4) 100 Screen `PAI` 모듈 수정**
 - CASE문에서는 `OR` 절만 가능
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZBC410_SOLUTION_03_02
+*&---------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
 
   IF exit_button = 'X'.
@@ -4234,6 +4412,10 @@ ENDMODULE.
 
 **5) 100 Screen `PBO` 모듈 수정**
 ```abap
+*&---------------------------------------------------------------------*
+*& Module Pool      SAPMZBC410_SOLUTION_03_02
+*&---------------------------------------------------------------------*
+
 MODULE status_0100 OUTPUT.
 
   SET PF-STATUS 'S100'.
@@ -4319,6 +4501,7 @@ ENDMODULE.
 - 아래 서브스크린에도 데이터가 뜸
 
 <img width="538" height="341" alt="image" src="https://github.com/user-attachments/assets/2c183bbf-c0dc-49f1-b516-5a79827d846c" />
+
 
 </br>
 </br>
