Update 2-1. 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/2-1. 프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/2-1. 프로그래밍 전용 리포트 개발(12.23).md
@@ -540,6 +540,10 @@ INCLUDE ZPROGB03_0027_E01.
 ```
 - `TOP` 모듈 생성
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0027_TOP
+*&---------------------------------------------------------------------*
+
 DATA: gs_flight TYPE dv_flights,
       gt_flight TYPE TABLE OF dv_flights.
 
@@ -593,6 +597,10 @@ SELECTION-SCREEN END OF BLOCK tab_strip.
 ```
 - `E01` 모듈 생성
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0027_E01
+*&---------------------------------------------------------------------*
+
 INITIALIZATION.
   so_car-sign = 'I'.
   so_car-option = 'BT'.
@@ -678,6 +686,10 @@ INCLUDE ZBC400_B03_PRACTICE4_E01.
 ```
 - `TOP` 모듈 생성
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_B03_PRACTICE4_TOP
+*&---------------------------------------------------------------------*
+
 DATA: gs_flight TYPE dv_flights,
       gt_flight TYPE TABLE OF dv_flights.
 
@@ -693,6 +705,10 @@ SELECTION-SCREEN END OF BLOCK blk1.
 ```
 - `E01` 모듈 생성
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_B03_PRACTICE4_E01
+*&---------------------------------------------------------------------*
+
 INITIALIZATION.
   so_car-sign = 'I'.
   so_car-option = 'BT'.
@@ -766,6 +782,10 @@ START-OF-SELECTION.
 
 - `TOP` 모듈 수정
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_B03_PRACTICE4_TOP
+*&---------------------------------------------------------------------*
+
 DATA: gs_flight TYPE dv_flights.
 
 PARAMETERS: pa_name TYPE c LENGTH 3.
@@ -795,6 +815,10 @@ SELECTION-SCREEN END OF BLOCK blk1.
 ```
 - `E01` 모듈 수정
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_B03_PRACTICE4_E01
+*&---------------------------------------------------------------------*
+
 tab_strip-activetab = 'comm2'.
 tab_strip-dynnr = '1200'.
 ```
@@ -816,6 +840,10 @@ tab_strip-dynnr = '1200'.
 
 - `TOP` 모듈 수정
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_B03_PRACTICE4_TOP
+*&---------------------------------------------------------------------*
+
 SELECTION-SCREEN BEGIN OF SCREEN 1300 AS SUBSCREEN.
   SELECTION-SCREEN BEGIN OF BLOCK blk.
     PARAMETERS: pa_all RADIOBUTTON GROUP rad,
