Update 2-1. 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/2-1. 프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/2-1. 프로그래밍 전용 리포트 개발(12.23).md
@@ -855,6 +855,10 @@ SELECTION-SCREEN END OF SCREEN 1300.
 ```
 - `E01` 모듈 수정
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_B03_PRACTICE4_E01
+*&---------------------------------------------------------------------*
+
 AT SELECTION-SCREEN ON BLOCK blk.
   IF pa_nat = 'X' AND pa_con IS INITIAL.
     MESSAGE e003(bc405).
