Update 2-1. 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/2-1. 프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/2-1. 프로그래밍 전용 리포트 개발(12.23).md
@@ -86,8 +86,10 @@ START-OF-SELECTION.
 - `SELECT-OPTIONS` 는 헤더라인이 있는 내부 테이블이므로 `INTO` 생략 가능
 - 내부적으로 `SIGN / OPTION / LOW / HIGH` 구조
 ```abap
+*************** TOP ****************
 SELECT-OPTIONS so_carr FOR sflight-carrid.
 
+*************** E01 ****************
 INITIALIZATION.
   MOVE: 'I'  TO so_carr-sign,
         'BT' TO so_carr-option,
@@ -116,6 +118,7 @@ SELECT-OPTIONS <seltab> FOR <field>
   [MODIF ID <mod>].
 ```
 ```abap
+*************** TOP ****************
 SELECT-OPTIONS so_car FOR sflight-carrid
   DEFAULT 'AA'                 "초기값 AA
   SIGN I OPTION EQ             "포함(I), 같음(EQ)
@@ -157,8 +160,7 @@ SELECTION-SCREEN BEGIN OF BLOCK <block>
 SELECTION-SCREEN END OF BLOCK <block>.
 ```
 ```abap
-REPORT bc405_screen_d5a.
-
+*************** TOP ****************
 SELECTION-SCREEN BEGIN OF BLOCK limit
   WITH FRAME TITLE text-001.
 
@@ -187,8 +189,7 @@ SELECTION-SCREEN END OF LINE.
 - `FOR FIELD <field>` → 해당 입력 필드와 텍스트 연결
 - `POSITION pos` → 출력 시작 위치 직접 지정
 ```abap
-REPORT bc405_screen_d4b.
-
+*************** TOP ****************
 SELECTION-SCREEN BEGIN OF LINE.
 
   SELECTION-SCREEN COMMENT 1(20) text-s03.
@@ -215,12 +216,14 @@ SELECTION-SCREEN END OF LINE.
 AT SELECTION-SCREEN ON <field>
 ```
 ```abap
+*************** TOP ****************
 SELECTION-SCREEN BEGIN OF SCREEN 1100.
 PARAMETERS:
   pa_cus AS CHECKBOX,
   pa_agy AS CHECKBOX.
 SELECTION-SCREEN END OF SCREEN 1100.
 
+*************** E01 ****************
 AT SELECTION-SCREEN ON pa_add.
   IF pa_add = 'X'.
     CALL SELECTION-SCREEN 1100
@@ -280,9 +283,7 @@ SELECTION-SCREEN END OF BLOCK <tab_block_name>.
 <tab_block_name>-dynnr     = '<subscreen_number>'.
 ```
 ```abap
-"----------------------------------------
-" 서브스크린 정의
-"----------------------------------------
+*************** TOP ****************
 SELECTION-SCREEN BEGIN OF SCREEN 101 AS SUBSCREEN.
   SELECT-OPTIONS so_carr FOR spfli-carrid.
 SELECTION-SCREEN END OF SCREEN 101.
@@ -296,11 +297,7 @@ SELECTION-SCREEN BEGIN OF SCREEN 103 AS SUBSCREEN.
 SELECTION-SCREEN END OF SCREEN 103.
 
 
-"----------------------------------------
-" 탭스트립 정의
-"----------------------------------------
 SELECTION-SCREEN BEGIN OF TABBED BLOCK tab_strip FOR 5 LINES.
-
   SELECTION-SCREEN TAB (20) tab1
     USER-COMMAND COMM1 DEFAULT SCREEN 101.
 
@@ -309,13 +306,10 @@ SELECTION-SCREEN BEGIN OF TABBED BLOCK tab_strip FOR 5 LINES.
 
   SELECTION-SCREEN TAB (20) tab3
     USER-COMMAND COMM3 DEFAULT SCREEN 103.
-
 SELECTION-SCREEN END OF BLOCK tab_strip.
 
 
-"----------------------------------------
-" 초기 활성 탭 / 서브스크린 지정
-"----------------------------------------
+*************** E01 ****************
 INITIALIZATION.
   tab1 = 'Carrier'.
   tab2 = 'Date'.
@@ -369,8 +363,7 @@ WRITE AT: / <pos>(<len>) <field>
           CURRENCY <currency_field>.
 ```
 ```abap
-REPORT bc405_fold_write.
-
+*************** TOP ****************
 CONSTANTS: gc_pos     TYPE i VALUE 12,
            gc_len     TYPE i VALUE 10,
            gc_len_pri TYPE i VALUE 15,
@@ -445,8 +438,7 @@ PARAMETERS <f>
   [MODIF ID <mod>].
 ```
 ```abap
-REPORT bc405_screen_d2.
-
+*************** TOP ****************
 PARAMETERS: pa_carr TYPE sflight-carrid MEMORY ID CAR OBLIGATORY,
             pa_name AS CHECKBOX DEFAULT 'X',
             pa_curr AS CHECKBOX DEFAULT 'X',
@@ -478,6 +470,7 @@ ENDCASE.
 SELECTION-SCREEN SKIP [<n>].
 ```
 ```abap
+*************** TOP ****************
 SELECTION-SCREEN SKIP 2.
 ```
 </br>
