Update 2-2. 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/2-2. 프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/2-2. 프로그래밍 전용 리포트 개발(12.24).md
@@ -39,6 +39,7 @@ AT SELECTION-SCREEN.
 ```
 - 예시 코드
 ```abap
+*************** TOP ****************
 TABLES SSCRFIELDS.
 
 DATA gv_btn_text TYPE string.
@@ -48,6 +49,7 @@ PARAMETERS p_carr TYPE scarr-carrid.
 SELECTION-SCREEN
   PUSHBUTTON /10(20) gv_btn_text USER-COMMAND btn.    " / 은 줄 바꿈
 
+*************** E01 ****************
 INITIALIZATION.
   gv_btn_text = 'Display details'.
 
@@ -82,12 +84,14 @@ AT SELECTION-SCREEN OUTPUT.
 - `screen-intensified` → 1이면 필드 강조 표시
 - `screen-display_3d` → 1이면 3D 스타일, 0이면 Flat 스타일
 ```abap
+*************** TOP ****************
 DATA: gs_booking TYPE sbook.
 
 SELECT-OPTIONS:
   so_car FOR gs_booking-carrid,
   so_con FOR gs_booking-connid MODIF ID abc.
 
+*************** E01 ****************
 AT SELECTION-SCREEN OUTPUT.
 
   LOOP AT SCREEN.
