Update 2-2. 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/2-2. 프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/2-2. 프로그래밍 전용 리포트 개발(12.24).md
@@ -125,6 +125,10 @@ AT SELECTION-SCREEN OUTPUT.
 
 - `TOP` 모듈 생성
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_B03_PRACTICE5_TOP
+*&---------------------------------------------------------------------*
+
 DATA: gs_flight TYPE dv_flights.
 
 PARAMETERS: pa_name TYPE c LENGTH 3.
@@ -156,6 +160,10 @@ SELECTION-SCREEN END OF BLOCK blk1.
 
 - `E01` 모듈 생성
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_B03_PRACTICE5_E01
+*&---------------------------------------------------------------------*
+
 INITIALIZATION.
   so_car-sign = 'I'.
   so_car-option = 'BT'.
@@ -196,6 +204,10 @@ AT SELECTION-SCREEN ON RADIOBUTTON GROUP rad.
 
 - `TOP` 모듈 생성
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0027_TOP
+*&---------------------------------------------------------------------*
+
 TABLES sscrfields.
 
 DATA: gs_flight TYPE dv_flights,
@@ -222,6 +234,10 @@ SELECTION-SCREEN END OF BLOCK blk1.
 
 - `E01` 모듈 생성
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0027_E01
+*&---------------------------------------------------------------------*
+
 INITIALIZATION.
   tab_strip-activetab ='COMM3'.
   tab_strip-dynnr = '0103'. " 초기 스크린 설정
