Update 2-2. 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/2-2. 프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/2-2. 프로그래밍 전용 리포트 개발(12.24).md
@@ -327,6 +327,10 @@ AT SELECTION-SCREEN. " PAI
 
 - `TOP` 모듈 수정
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_B03_PRACTICE4_TOP
+*&---------------------------------------------------------------------*
+
 TABLES SSCRFIELDS.
 
 DATA: gs_flight TYPE dv_flights,
@@ -349,6 +353,10 @@ SELECTION-SCREEN END OF SCREEN 1100.
 
 - `E01` 모듈 수정
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_B03_PRACTICE4_E01
+*&---------------------------------------------------------------------*
+
 INITIALIZATION.
   so_car-sign = 'I'.
   so_car-option = 'BT'.
@@ -418,6 +426,10 @@ AT SELECTION-SCREEN.
 
 - `TOP` 모듈 생성
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_B03_PRACTICE6_TOP
+*&---------------------------------------------------------------------*
+
 DATA: gs_scarr TYPE scarr,
       gt_scarr TYPE TABLE OF scarr.
 
@@ -443,6 +455,9 @@ DATA: go_salv TYPE REF TO cl_salv_table.
 
 - `E01` 모듈 수정
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_B03_PRACTICE6_E01
+*&---------------------------------------------------------------------*
 
 INITIALIZATION.
   SO_car-sign = 'I'.
