Update 2-3. 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/2-3. 프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/2-3. 프로그래밍 전용 리포트 개발(12.26).md
@@ -84,8 +84,12 @@
 ```abap
 DATA: <ref_var> TYPE REF TO <class_name>.
 ```
+- `CL_GUI_CUSTOM_CONTAINER` : Screen의 Area와 연결되는 컨테이너
+- `CL_GUI_ALV_GRID` : Container 안에서 데이터를 표시하는 ALV Grid 객체
 ```abap
-DATA: go_alv TYPE REF TO cl_gui_alv_grid.
+*************** TOP ****************
+DATA: go_cont TYPE REF TO CL_GUI_CUSTOM_CONTAINER,     " Container 참조변수 생성 (아직 객체 생성되기 전)
+      go_alv TYPE REF TO CL_GUI_ALV_GRID.              " ALV 참조변수 생성 (아직 객체 생성되기 전)
 ```
 </br>
 </br>
@@ -107,18 +111,54 @@ ENDIF.
 - `container_name` → Screen의 Area와 연결
 - `i_parent` → ALV ↔ Container 연결
 ```abap
+*************** PBO ****************
 MODULE init_alv OUTPUT.
-  IF go_container IS INITIAL.
-    CREATE OBJECT go_container
+  " 1. SCREEN에 Custom Area 추가
+  " 2. Container Control 생성 (AREA와 연결)
+  IF go_cont IS INITIAL. " 최초 1번만 실행
+    CREATE OBJECT go_cont
       EXPORTING
-        container_name = 'MY_CONTROL_AREA'.
+        container_name              = 'AREA'
+      EXCEPTIONS
+        cntl_error                  = 1
+        cntl_system_error           = 2
+        create_error                = 3
+        lifetime_error              = 4
+        lifetime_dynpro_dynpro_link = 5
+        others                      = 6.
 
+    " 3. ALV Grid 생성
     CREATE OBJECT go_alv
       EXPORTING
-        i_parent = go_container.
+        i_parent          = go_cont " Container와 연결
+      EXCEPTIONS
+        error_cntl_create = 1
+        error_cntl_init   = 2
+        error_cntl_link   = 3
+        error_dp_create   = 4
+        others            = 5.
   ENDIF.
 ENDMODULE.
 ```
+</br>
+</br>
+
+- `Custom Container` 객체 생성
+  
+<img width="377" height="363" alt="image" src="https://github.com/user-attachments/assets/6d99dc1d-c5bd-4140-b21a-e41130485067" />
+</br>
+</br>
+
+- `ALV Grid` 객체 생성
+
+<img width="375" height="359" alt="image" src="https://github.com/user-attachments/assets/90735023-c617-449e-98ad-6b3eed0e0f61" />
+</br>
+</br>
+
+- ALV Grid 메서드 호출
+<img width="384" height="362" alt="image" src="https://github.com/user-attachments/assets/e2594dd2-511b-4721-b9c6-b9e5ec7d13ab" />
+</br>
+</br>
 </br>
 </br>
 
@@ -135,18 +175,28 @@ ENDFORM.
 - `->FREE()` : 객체가 사용하는 GUI 컨트롤 자원 해제
 - `FREE ref` : 참조 변수만 해제(값 INITIAL로 초기화)
 ```abap
-MODULE exit_commands_0100 INPUT.    " PAI
-  CASE ok_code.
-    WHEN 'EXIT' OR 'CANCEL'.
-      PERFORM free_control_resources.
+*************** PAI ****************
+MODULE exit INPUT.
+  CASE OK_CODE.
+    WHEN 'EXIT'.
+      PERFORM FREE_ALV.
       LEAVE PROGRAM.
+    WHEN 'CANCEL'.
+      PERFORM FREE_ALV.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
   ENDCASE.
 ENDMODULE.
 
-FORM free_control_resources.        " F01
-  CALL METHOD go_alv->free.
-  CALL METHOD go_container->free.
-  FREE: go_alv, go_container.
+*************** F01 ****************
+FORM free_alv.
+  IF GO_ALV IS NOT INITIAL.
+    GO_ALV->FREE( ).
+  ENDIF.
+  IF GO_CONT IS NOT INITIAL.
+    GO_CONT->FREE( ).
+  ENDIF.
+  FREE: GO_ALV, GO_CONT.
 ENDFORM.
 ```
 </br>
@@ -168,14 +218,16 @@ CALL METHOD <alv_ref>->set_table_for_first_display
     too_many_lines                = 3
     others                        = 4.
 ```
+- `SET_TABLE_FOR_FIRST_DISPLAY` : 내부 테이블 데이터를 ALV Grid에 최초로 표시하는 메서드
+- SET_TABLE* 하고 f4 누르면 자동완성
 ```abap
-DATA: gt_flight TYPE STANDARD TABLE OF sflight.
-
+*************** PBO ****************
+" 4. ALV Grid 안에 Data Display
 CALL METHOD go_alv->set_table_for_first_display
   EXPORTING
-    i_structure_name = 'SFLIGHT'
+    i_structure_name              = 'SFLIGHT'
   CHANGING
-    it_outtab        = gt_flight
+    it_outtab                     = gt_flight
   EXCEPTIONS
     invalid_parameter_combination = 1
     program_error                 = 2
@@ -195,21 +247,34 @@ CALL METHOD <alv_ref>->refresh_table_display
   EXPORTING
     is_stable = <ls_stable>.
 ```
-- `lvc_s_stbl` 은 ALV 새로고침 시 스크롤·선택 위치가 초기화되지 않도록 화면을 고정하는 옵션
+- `LVC_S_STBL` 은 ALV 새로고침 시 스크롤·선택 위치가 초기화되지 않도록 화면을 고정하는 옵션
 ```abap
 DATA ls_stable TYPE lvc_s_stbl.
+
 ls_stable-row = 'X'. " 행 위치 유지
 ls_stable-col = 'X'. " 열 위치 유지
 ```
+- `REFRESH_TABLE_DISPLAY` : 내부 테이블 변경 내용을 ALV Grid에 다시 표시(갱신)하는 메서드
 ```abap
-DATA ls_stable TYPE lvc_s_stbl.
+*************** TOP ****************
+DATA gs_stable TYPE LVC_S_STBL.
 
-ls_stable-row = 'X'.
-ls_stable-col = 'X'.
+*************** PBO ****************
+IF go_cont IS INITIAL.
+    " 생략
+ELSE.
+  gs_stable-row = 'X'.
+  gs_stable-col = 'X'.
 
-CALL METHOD go_alv->refresh_table_display
-  EXPORTING
-    is_stable = ls_stable.
+  CALL METHOD go_alv->refresh_table_display
+    EXPORTING
+      is_stable      = gs_stable
+      i_soft_refresh = ''  " X : 정렬, 필터, 그외 기능들 유지
+      " _ : 전체 리프레쉬 (기본)
+    EXCEPTIONS
+      finished       = 1
+      OTHERS         = 2.
+ENDIF.
 ```
 </br>
 </br>
@@ -222,206 +287,9 @@ CALL METHOD go_alv->refresh_table_display
 ## < ABAP 객체 생성 예제 >
 </br>
 
-**1) 참조 변수 선언**
-- `CL_GUI_CUSTOM_CONTAINER` : Screen의 Area와 연결되는 컨테이너
-- `CL_GUI_ALV_GRID` : Container 안에서 데이터를 표시하는 ALV Grid 객체
-```abap
-REPORT ZPROGB03_0028.
 
-DATA: OK_CODE TYPE sy-ucomm.
-DATA: gs_flight TYPE sflight,
-      gt_flight TYPE TABLE OF sflight.
 
-" Container 참조변수 생성 (아직 객체 생성되기 전)
-DATA: go_cont TYPE REF TO CL_GUI_CUSTOM_CONTAINER,
-      " ALV 참조변수 생성 (아직 객체 생성되기 전)
-      go_alv TYPE REF TO CL_GUI_ALV_GRID.
 
-PARAMETERS: pa_car TYPE s_carr_id.
-SELECT-OPTIONS: so_con FOR gs_flight-connid,
-                so_fdt FOR gs_flight-fldate.
-
-INCLUDE ZPROGB03_0028_O01.  " PBO
-INCLUDE ZPROGB03_0028_I01.  " PAI
-INCLUDE ZPROGB03_0028_F01.
-
-START-OF-SELECTION.
-
-PERFORM get_data.
-CALL SCREEN 100.
-```
-</br>
-</br>
-</br>
-
-**2) `Screen` 에 모듈 생성**
-```abap
-PROCESS BEFORE OUTPUT.
- MODULE STATUS_0100.
- MODULE INIT_ALV.
- MODULE CLEAR_OK_CODE.
-
-PROCESS AFTER INPUT.
- MODULE EXIT AT EXIT-COMMAND.
- MODULE USER_COMMAND_0100.
-```
-</br>
-</br>
-</br>
-
-**3) `PAI` 에 ALV 컨트롤 인스턴스 해제**
-```abap
-FORM get_data.
-  SELECT *
-    FROM sflight
-    INTO TABLE gt_flight
-    WHERE carrid = pa_car
-      AND connid IN so_con
-      AND fldate IN so_fdt.
-  IF sy-subrc = 0.
-
-  ENDIF.
-ENDFORM.
-
-*&---------------------------------------------------------------------*
-
-FORM free_alv.
-  IF GO_ALV IS NOT INITIAL.
-    GO_ALV->FREE( ).
-  ENDIF.
-  IF GO_CONT IS NOT INITIAL.
-    GO_CONT->FREE( ).
-  ENDIF.
-  FREE: GO_ALV, GO_CONT.
-ENDFORM.
-```
-```abap
-MODULE exit INPUT.
-  CASE OK_CODE.
-    WHEN 'EXIT'.
-      PERFORM FREE_ALV.
-      LEAVE PROGRAM.
-    WHEN 'CANCEL'.
-      PERFORM FREE_ALV.
-      LEAVE TO SCREEN 0.
-    WHEN OTHERS.
-  ENDCASE.
-ENDMODULE.
-
-*&---------------------------------------------------------------------*
-
-MODULE user_command_0100 INPUT.
-  CASE OK_CODE.
-    WHEN 'BACK'.
-      LEAVE TO SCREEN 0.
-    WHEN OTHERS.
-  ENDCASE.
-ENDMODULE.
-```
-</br>
-</br>
-</br>
-
-**4) `PBO` 에 객체 생성 및 ALV Grid 데이터 표시**
-- `Custom Container` 객체 생성
-  
-<img width="377" height="363" alt="image" src="https://github.com/user-attachments/assets/6d99dc1d-c5bd-4140-b21a-e41130485067" />
-</br>
-</br>
-
-- `ALV Grid` 객체 생성
-
-<img width="375" height="359" alt="image" src="https://github.com/user-attachments/assets/90735023-c617-449e-98ad-6b3eed0e0f61" />
-</br>
-</br>
-
-- ALV Grid 메서드 호출
-<img width="384" height="362" alt="image" src="https://github.com/user-attachments/assets/e2594dd2-511b-4721-b9c6-b9e5ec7d13ab" />
-</br>
-</br>
-
-- `PBO` 에 객체 생성 및 ALV Grid 데이터 표시
-- `SET_TABLE_FOR_FIRST_DISPLAY` : 내부 테이블 데이터를 ALV Grid에 최초로 표시하는 메서드
-- SET_TABLE* 하고 f4 누르면 자동완성
-- `REFRESH_TABLE_DISPLAY` : 내부 테이블 변경 내용을 ALV Grid에 다시 표시(갱신)하는 메서드
-```abap
-MODULE status_0100 OUTPUT.
- SET PF-STATUS 'S100'.
- SET TITLEBAR 'T100'.
-ENDMODULE.
-
-*&---------------------------------------------------------------------*
-
-MODULE clear_ok_code OUTPUT.
-  CLEAR OK_CODE.
-ENDMODULE.
-
-*&---------------------------------------------------------------------*
-
-MODULE init_alv OUTPUT.
-  " 1. SCREEN에 Custom Area 추가
-  " 2. Container Control 생성 (AREA와 연결)
-  IF go_cont IS INITIAL. " 최초 1번만 실행
-    CREATE OBJECT go_cont
-      EXPORTING
-        container_name              = 'AREA'
-      EXCEPTIONS
-        cntl_error                  = 1
-        cntl_system_error           = 2
-        create_error                = 3
-        lifetime_error              = 4
-        lifetime_dynpro_dynpro_link = 5
-        others                      = 6.
-
-    IF sy-subrc <> 0.
-      MESSAGE  'Container 생성 중 오류 발생' TYPE 'E'.
-    ENDIF.
-
-    " 3. ALV Grid 생성
-    CREATE OBJECT go_alv
-      EXPORTING
-        i_parent          = go_cont " Container와 연결
-      EXCEPTIONS
-        error_cntl_create = 1
-        error_cntl_init   = 2
-        error_cntl_link   = 3
-        error_dp_create   = 4
-        others            = 5.
-
-    IF sy-subrc <> 0.
-      MESSAGE 'ALV Grid 생성 중 오류 발생' TYPE 'E'.
-    ENDIF.
-
-    " 4. ALV Grid 안에 Data Display
-    CALL METHOD go_alv->set_table_for_first_display
-      EXPORTING
-        i_structure_name              = 'SFLIGHT'
-      CHANGING
-        it_outtab                     = gt_flight
-      EXCEPTIONS
-        invalid_parameter_combination = 1
-        program_error                 = 2
-        too_many_lines                = 3
-        others                        = 4.
-
-    IF sy-subrc <> 0.
-*     Implement suitable error handling here
-    ENDIF.
-  ELSE.
-    " 최초에 1번 생성괸 후, 두번째부터는 ELSE구문을 실행한다
-    CALL METHOD go_alv->refresh_table_display
-      EXCEPTIONS
-        finished       = 1
-        others         = 2.
-
-    IF sy-subrc <> 0.
-*     Implement suitable error handling here
-    ENDIF.
-
-  ENDIF.
-
-ENDMODULE.
-```
 </br>
 </br>
 </br>
